--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
   "manifest_version": 2,
-  "name": "StorWallet",
-  "short_name": "StorWallet",
+  "name": "Rolls Wallet",
+  "short_name": "Rolls Wallet",
   "version": "0.1",
   "default_locale": "en",
-  "description": "Web Wallet for Stor Blockchain",
+  "description": "Web Wallet for PecanRolls Blockchain",
   "icons": {
     "16": "images/icon-16.png",
     "19": "images/icon-19.png",
@@ -23,10 +23,10 @@
       "48": "images/icon-48.png",
       "128": "images/icon-128.png"
     },
-    "default_title": "storwallet",
+    "default_title": "rollswallet",
     "default_popup": "popup.html"
   },
-  "author": "https://storwallet.com/",
+  "author": "https://pecanrolls.net/",
   "background": {
     "page": "background.html",
     "persistent": true
